update map onFlurstueckChange, fixed bug source already exists

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -9,7 +9,8 @@
                                        [(adresse)]="adresse"
                                        [(features)]="features"
                                        [(stichtag)]="stichtag"
-                                       [(teilmarkt)]="teilmarkt"></power-bodenrichtwertkarte>
+                                       [(teilmarkt)]="teilmarkt"
+                                       [(flurstueck)]="flurstueck"></power-bodenrichtwertkarte>
         </div>
         <div [class]="isCollapsed ? 'col-12' : 'col-lg-6 height-lg'">
             <div class="row">
