gemarkung help text

--- a/power/src/app/shared/flurstueck-search/flurstueck-search.component.html
+++ b/power/src/app/shared/flurstueck-search/flurstueck-search.component.html
@@ -17,8 +17,13 @@
                                maxlength="4"
                                pattern="[0-9]*"
                                i18n-placeholder
-                               placeholder="Germarkungsnummer"
-                               aria-labelledby="germarkungsnr">
+                               placeholder="Gemarkung"
+                               aria-labelledby="germarkungsnr"
+                               aria-describedby="gemarkungHelpText">
+                        <small id="gemarkungHelpText"
+                               class="form-text text-muted"
+                               i18n>4-stelliger Gemarkungsschlüssel
+                        </small>
                   </div>
             </div>
             <div class="form-row py-1">
