--- a/power/src/app/shared/flurstueck-search/flurstueck-search.component.html
+++ b/power/src/app/shared/flurstueck-search/flurstueck-search.component.html
@@ -86,7 +86,9 @@
                        viewBox="0 0 16 16"
                        class="bi bi-search"
                        fill="currentColor"
-                       xmlns="http://www.w3.org/2000/svg">
+                       xmlns="http://www.w3.org/2000/svg"
+                       focusable="false"
+                       aria-hidden="true">
                         <path fill-rule="evenodd"
                               d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
                         <path fill-rule="evenodd"
@@ -96,4 +98,4 @@
                         i18n>Suchen</span>
             </button>
       </form>
-      <power-modalmini>
+</power-modalmini>
