added different graphs for same type of use

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -1,8 +1,6 @@
 <!-- Keine Nutzung des <table>-Elements, da fehlendes responsive-Verhalten  -->
 <div class="card m-0"
-     role="table"
-     aria-colcount="2"
-     aria-rowcount="4">
+     role="table">
     <div class="card-header">
         <div class="sr-only caption"
              i18n>Tabelle Bodenrichtwertzone {{ feature.properties.nutzung | nutzung }}</div>
