--- a/power/src/app/fragebogen/editor/conditions/conditions.component.html
+++ b/power/src/app/fragebogen/editor/conditions/conditions.component.html
@@ -120,6 +120,10 @@
             value="{{ '&#123;' + variable.name + '&#125;' }}">
         {{ '&#123;' + variable.name + '&#125;' }}
     </option>
+    <option value="true"
+            i18n>Für boolsche vergleiche auf Wahr</option>
+    <option value="false"
+            i18n>Für boolsche vergleiche auf Falsch</option>
     <option value="{item}"
             i18n>Referenziert die ausgewählten Antwort(en) dieser Frage</option>
     <option value="{pageno}"
