--- a/power/src/app/fragebogen/editor/conditions/conditions.component.html
+++ b/power/src/app/fragebogen/editor/conditions/conditions.component.html
@@ -121,9 +121,9 @@
         {{ '&#123;' + variable.name + '&#125;' }}
     </option>
     <option value="true"
-            i18n>Für boolsche vergleiche auf Wahr</option>
+            i18n>Für boolesche Vergleiche auf wahr</option>
     <option value="false"
-            i18n>Für boolsche vergleiche auf Falsch</option>
+            i18n>Für boolesche Vergleiche auf falsch</option>
     <option value="{item}"
             i18n>Referenziert die ausgewählten Antwort(en) dieser Frage</option>
     <option value="{pageno}"
