--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -378,7 +378,7 @@
                    type="line"
                    [source]="ndsSource"
                    [minzoom]="11"
-                   [sourceLayer]="'br_brzone_flat'"
+                   [sourceLayer]="'br_brzone_flat_with_whitespace'"
                    [paint]="{
       'line-color': teilmarkt.color,
       'line-width': {
@@ -396,7 +396,7 @@
                    type="line"
                    [source]="ndsSource"
                    [minzoom]="11"
-                   [sourceLayer]="'br_brzone_flat'"
+                   [sourceLayer]="'br_brzone_flat_with_whitespace'"
                    [paint]="{
                         'line-color': '#0080FF',
                         'line-dasharray': [7,5],
@@ -414,7 +414,7 @@
         <mgl-layer id="landwirtschaft"
                    type="line"
                    [source]="ndsSource"
-                   [sourceLayer]="'br_brzone_flat'"
+                   [sourceLayer]="'br_brzone_flat_with_whitespace'"
                    [minzoom]="10"
                    [paint]="{
       'line-color': teilmarkt.color,
@@ -431,7 +431,7 @@
         <mgl-layer id="appto_bauland"
                    type="symbol"
                    [source]="ndsSource"
-                   [sourceLayer]="'br_brzone_flat'"
+                   [sourceLayer]="'br_brzone_flat_with_whitespace'"
                    [minzoom]="13"
                    [paint]="{
       'text-halo-color' : '#fff',
@@ -442,7 +442,8 @@
                    [layout]="teilmarkt.value.includes('B') ?
                    {
                     'visibility': 'visible',
-                    'text-field': ['number-format',['to-number', ['get','brw']], { 'locale':'de', 'max-fraction-digits': 0}],
+                    'text-field': ['get','display'],
+                    'text-max-width': 0,
                     'text-size': {
                         'stops': [[12,10],[15,16]]
                         },
@@ -450,7 +451,7 @@
                     } :
                     {
                     'visibility': 'none',
-                    'text-field': ['number-format',['to-number', ['get','brw']], { 'locale':'de', 'max-fraction-digits': 0}],
+                    'text-field': ['get','display'],
                     'text-size': {
                         'stops': [[12,10],[15,16]]
                         },
@@ -462,7 +463,7 @@
         <mgl-layer id="appto_landwirtschaft"
                    type="symbol"
                    [source]="ndsSource"
-                   [sourceLayer]="'br_brzone_flat'"
+                   [sourceLayer]="'br_brzone_flat_with_whitespace'"
                    [minzoom]="10"
                    [paint]="{
       'text-halo-color' : '#fff',
@@ -472,15 +473,16 @@
      }"
                    [layout]="teilmarkt.value.includes('LF') ? {
                     'visibility': 'visible',
-                    'text-field': '{brw}',
+                    'text-field': ['get','display'],
+                    'text-max-width': 0,
                     'text-size': {
                         'stops': [[10,20],[15,24]]
                         },
                     'text-font': ['Klokantech Noto Sans Regular']
-                    } : 
+                    } :
                     {
                         'visibility': 'none',
-                        'text-field': '{brw}',
+                        'text-field': ['get','display'],
                         'text-size': {
                         'stops': [[10,20],[15,24]]
                         },
@@ -555,7 +557,7 @@
       'text-halo-blur' : 2,
       'text-color' : 'rgb(117, 129, 145)'
      }"
-                   [layout]="teilmarkt.value.includes('LF') ? 
+                   [layout]="teilmarkt.value.includes('LF') ?
                    {
                         'visibility': 'visible',
                         'text-field': ['number-format',['to-number', ['get','brw']], { 'locale':'de', 'max-fraction-digits': 0}],
@@ -563,7 +565,7 @@
                             'stops': [[12,10],[15,16]]
                             },
                         'text-font': ['Klokantech Noto Sans Regular']
-                    } : 
+                    } :
                     {
                         'visibility': 'none',
                         'text-field': ['number-format',['to-number', ['get','brw']], { 'locale':'de', 'max-fraction-digits': 0}],
@@ -586,7 +588,7 @@
       'text-halo-blur' : 2,
       'text-color' : 'rgb(117, 129, 145)'
      }"
-                   [layout]="teilmarkt.value.includes('LF') ? 
+                   [layout]="teilmarkt.value.includes('LF') ?
                         {
                             'visibility': 'visible',
                             'text-field': '{brw}',
@@ -594,7 +596,7 @@
                                 'stops': [[10,20],[15,24]]
                                 },
                             'text-font': ['Klokantech Noto Sans Regular']
-                        } : 
+                        } :
                         {
                             'visibility': 'none',
                             'text-field': '{brw}',
