--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -35,7 +35,8 @@
                    class="form-control"
                    [(ngModel)]="item.min"
                    (change)="modelChanged($event)"
-                   [class.is-invalid]="!item.min && item.min !== 0 || item.min < 0"
+                   [class.is-invalid]="!item.min && item.min !== 0 || item.min < 0 || item.min % 1 !== 0"
+                   step="1"
                    min="0"
                    id="validatorMin{{ i }}{{ uniqId }}"
                    name="validatorMin{{ i }}{{ uniqId }}"
@@ -53,7 +54,8 @@
                    class="form-control"
                    [(ngModel)]="item.max"
                    (change)="modelChanged($event)"
-                   [class.is-invalid]="!item.max && item.max !== 0 || item.max < 0 || item.min > item.max"
+                   [class.is-invalid]="!item.max && item.max !== 0 || item.max < 0 || item.min > item.max || item.max % 1 !== 0"
+                   step="1"
                    min="0"
                    id="validatorMax{{ i }}{{ uniqId }}"
                    name="validatorMax{{ i }}{{ uniqId }}"
