--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -3,6 +3,15 @@
         <div class="col-sm text-center pt-3">
             <h1 id="feedbackHeader"
                 i18n>Feedback</h1>
+
+            <p class="lead mb-3">
+                <span i18n>Eine Übersicht von bereits vorhandenen Feedback finden Sie in unserem</span>
+                <a href="https://gitlab.com/Kay-LGLN/power/-/issues"
+                   class="ml-1"
+                   target="_blank"
+                   rel="noreferrer" i18n>Ticketsystem</a>.
+            </p>
+
             <p class="lead mb-3"
                id="feedbackInfo"
                aria-label="Sie haben ein Problem? Oder wollen einen Vorschlag machen? Bitte
